# finance_tools

./: .coverage  .gitignore  CODE_REVIEW_OPTIMIZATION_RECOMMENDATIONS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PRODUCTION_QUALITY_CHECKLIST.md  PRODUCTION_RELEASE.md  PRODUCTION_RELEASE_v1.2.0.md  PRODUCTION_RELEASE_v1.3.0.md  PRODUCTION_RELEASE_v1.3.1.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_TESTING.md  RELEASE_DEPLOYED_v1.2.0.txt  RELEASE_DEPLOYED_v1.3.0.txt  RELEASE_DEPLOYED_v1.3.1.txt  RELEASE_DEPLOYED_v1.3.2.txt  RELEASE_DEPLOYED_v1.3.3.txt  RELEASE_NOTES.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.3.md  RELEASE_SUMMARY_v1.2.0.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md  RELEASE_v1.3.1.md  REPORT_ENHANCEMENTS.md  STATUS_v1.2.0.txt  STATUS_v1.3.0.txt  STATUS_v1.3.1.txt  STATUS_v1.3.2.txt  STATUS_v1.3.3.txt  TEST_COVERAGE_ANALYSIS.md  TEST_REFACTORING_COMPLETE.txt  TEST_REPORT.md  debug_cashflows.py  debug_cashflows2.py  debug_npv.py  debug_nvda.py  debug_nvda_detail.py  (+17 more)
portfolio_analyzer/: CODE_EFFICIENCY_REVIEW.md  MANIFEST.in  README.md  RELEASE_NOTES.md  __init__.py  analyzer.py  cli.py  loaders.py  metrics.py  pyproject.toml  reports.py  requirements.txt  utils.py
portfolio_analyzer/examples/: example_report.html  example_report.txt  example_trades.csv
portfolio_analyzer/portfolio_analyzer/: __init__.py  analyzer.py  cli.py  investor_comparison.py  metrics.py  reports.py  utils.py
portfolio_analyzer/portfolio_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
portfolio_analyzer/tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_html_sorting.py  test_investor_comparison.py  test_loaders.py  test_metrics.py  test_reports.py  test_utils.py
skills/: README.md  release_agent.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_metrics.py  test_reports.py  test_utils.py
zhuo_personal_trade/: my_trades.csv
